--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>
+        {% block title %}
+        Home Page
+        {% endblock title %}
+    </title>
+    <link rel="stylesheet" href="{% static 'index.css' %}" type="text/css">
 </head>
 <body>
-    
+    {% block content %}
     {% if query_set %}
 
         <form action="{% url 'option:process' %}" method="post">
@@ -15,7 +21,7 @@
 
             {% for object in query_set %}
 
-                <h2>{{ forloop.counter }}. {{ object.question_text }}
+                <h2>{{ forloop.counter }}. {{ object.question_text }}</h2>
                     {% for choice in object.choice_set.all %}
 
                         <h4><input type="checkbox" name="p-{{ object.id }}-{{ choice.option }}" value="checked"> {{ choice.option }}</h4>
@@ -27,10 +33,8 @@
             <button type="submit">Submit</button>
 
         </form>
-
-        
     
     {% endif %}
-
+    {% endblock content %}
 </body>
 </html>
