--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     {% block content %}
+    <h3>Click <a href="{% url 'option:create' %}">here</a> to create questions!</h3>
     {% if query_set %}
 
         <form action="{% url 'option:process' %}" method="post">
